; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cmd_info.c_demangle_internal.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cmd_info.c_demangle_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32, i32 }

@.str = private unnamed_addr constant [6 x i8] c"dlang\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i8*, i8*)* @demangle_internal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @demangle_internal(%struct.TYPE_5__* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* null, i8** %8, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @r_bin_demangle_type(i8* %10)
  store i32 %11, i32* %9, align 4
  %12 = load i32, i32* %9, align 4
  switch i32 %12, label %44 [
    i32 133, label %13
    i32 131, label %21
    i32 129, label %24
    i32 128, label %27
    i32 132, label %35
    i32 130, label %41
  ]

13:                                               ; preds = %3
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load i8*, i8** %7, align 8
  %20 = call i8* @r_bin_demangle_cxx(i32 %18, i8* %19, i32 0)
  store i8* %20, i8** %8, align 8
  br label %49

21:                                               ; preds = %3
  %22 = load i8*, i8** %7, align 8
  %23 = call i8* @r_bin_demangle_java(i8* %22)
  store i8* %23, i8** %8, align 8
  br label %49

24:                                               ; preds = %3
  %25 = load i8*, i8** %7, align 8
  %26 = call i8* @r_bin_demangle_objc(i32* null, i8* %25)
  store i8* %26, i8** %8, align 8
  br label %49

27:                                               ; preds = %3
  %28 = load i8*, i8** %7, align 8
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i8* @r_bin_demangle_swift(i8* %28, i32 %33)
  store i8* %34, i8** %8, align 8
  br label %49

35:                                               ; preds = %3
  %36 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %37 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %36, i32 0, i32 0
  %38 = load %struct.TYPE_6__*, %struct.TYPE_6__** %37, align 8
  %39 = load i8*, i8** %7, align 8
  %40 = call i8* @r_bin_demangle_plugin(%struct.TYPE_6__* %38, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* %39)
  store i8* %40, i8** %8, align 8
  br label %49

41:                                               ; preds = %3
  %42 = load i8*, i8** %7, align 8
  %43 = call i8* @r_bin_demangle_msvc(i8* %42)
  store i8* %43, i8** %8, align 8
  br label %49

44:                                               ; preds = %3
  %45 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %46 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %45, i32 0, i32 0
  %47 = load %struct.TYPE_6__*, %struct.TYPE_6__** %46, align 8
  %48 = call i32 @r_bin_demangle_list(%struct.TYPE_6__* %47)
  store i32 1, i32* %4, align 4
  br label %63

49:                                               ; preds = %41, %35, %27, %24, %21, %13
  %50 = load i8*, i8** %8, align 8
  %51 = icmp ne i8* %50, null
  br i1 %51, label %52, label %62

52:                                               ; preds = %49
  %53 = load i8*, i8** %8, align 8
  %54 = load i8, i8* %53, align 1
  %55 = icmp ne i8 %54, 0
  br i1 %55, label %56, label %59

56:                                               ; preds = %52
  %57 = load i8*, i8** %8, align 8
  %58 = call i32 @r_cons_printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* %57)
  br label %59

59:                                               ; preds = %56, %52
  %60 = load i8*, i8** %8, align 8
  %61 = call i32 @free(i8* %60)
  store i32 0, i32* %4, align 4
  br label %63

62:                                               ; preds = %49
  store i32 1, i32* %4, align 4
  br label %63

63:                                               ; preds = %62, %59, %44
  %64 = load i32, i32* %4, align 4
  ret i32 %64
}

declare dso_local i32 @r_bin_demangle_type(i8*) #1

declare dso_local i8* @r_bin_demangle_cxx(i32, i8*, i32) #1

declare dso_local i8* @r_bin_demangle_java(i8*) #1

declare dso_local i8* @r_bin_demangle_objc(i32*, i8*) #1

declare dso_local i8* @r_bin_demangle_swift(i8*, i32) #1

declare dso_local i8* @r_bin_demangle_plugin(%struct.TYPE_6__*, i8*, i8*) #1

declare dso_local i8* @r_bin_demangle_msvc(i8*) #1

declare dso_local i32 @r_bin_demangle_list(%struct.TYPE_6__*) #1

declare dso_local i32 @r_cons_printf(i8*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
